syntax = "proto3";

package Addreesbook;


service AddreesbookService {
	rpc Add (Person) returns (AddRequest);

	rpc AddStream (stream Person) returns (stream AddRequest);

	rpc AddWithSummaryStream (stream Person) returns (AddSummary);

	rpc Get (GetRequest) returns (GetResponce);

	rpc GetALLStream (GetAllRequest) returns (stream GetResponce);

	rpc GetALL (GetAllRequest) returns (GetAllResponce);

	rpc Remove (RemoveRequest) returns (Person);
}

message AddSummary {
	int32 count = 1;
	int32 elapsed_time = 2;
}

message Person {
	string name = 1;
	int32 id = 2;
}

message AddRequest {
	OperationType  execution =1;
	Person person =2;
}

enum OperationType {
	OK =0;
	ERROR = 1;
}

message GetRequest {
	int32 id =1;
}

message GetResponce {
	Person person = 1;
}

message GetAllRequest {}

message GetAllResponce {
	repeated Person people = 1;
}

message RemoveRequest {
	int32 id =1;
}